integrating forecast and geocode utilities. Start using ESlint

--- a/udemy/web-server/package.json
+++ b/udemy/web-server/package.json
@@ -12,6 +12,12 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "postman-request": "^2.88.1-postman.24"
+  },
+  "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.0"
   }
 }
