--- a/Andrew-Mead-Course/task-manager/package.json
+++ b/Andrew-Mead-Course/task-manager/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongodb": "^3.6.0"
+    "mongodb": "^3.6.0",
+    "nodemon": "^2.0.4"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
