--- a/nodeJS-course/task-manager/package.json
+++ b/nodeJS-course/task-manager/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "mongodb": "^3.6.0",
-    "nodemon": "^2.0.4"
+    "mongoose": "^5.10.0",
+    "nodemon": "^2.0.4",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
