--- a/nodeJS-course/task-manager/package.json
+++ b/nodeJS-course/task-manager/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
     "multer": "^1.4.2",
+    "sharp": "^0.26.1",
     "validator": "^13.1.1"
   },
   "devDependencies": {
