--- a/webDevelopmentClub-ESCOM/my-project/package.json
+++ b/webDevelopmentClub-ESCOM/my-project/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "http": "0.0.1-security",
     "mongoose": "^5.10.11",
     "nodemon": "^2.0.6",
